header section added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop Assignment</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <!--This is header section -->
+    <header class="header">
+        <div class="header-content">
+            <h1 class="header-heading">Let's make beautiful flowers a part of your life.</h1>
+            <p class="header-text">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
+                more-or-less normal distribution of letters.</p>
+            <button class="btn">Shop Now</button>
+        </div>
+
+        <div class="header-img">
+            <img src="/img/pngwing 10.png" alt="img" class="img">
+        </div>
+    </header>
+
+    <!--This is main section -->
+    <main>
+
+    </main>
+
+    <!--This is footer section -->
+    <footer>
+
+    </footer>
 </body>
+
 </html>
