featured and serices added

--- a/index.html
+++ b/index.html
@@ -24,14 +24,69 @@
             <button class="btn">Shop Now</button>
         </div>
 
-        <div class="header-img">
-            <img src="/img/pngwing 10.png" alt="img" class="img">
+        <div class="header-img-area">
+            <img class="header-img" src="/img/pngwing 10.png" alt="header-img">
         </div>
     </header>
 
     <!--This is main section -->
-    <main>
 
+    <main>
+        <!--This is featured section -->
+
+        <section class="featured">
+            <div class="featured-content">
+                <div class="featured-header">
+                    <h2 class="heading-primary">Our Featured Flowers</h2>
+                    <p class="primary-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+
+                <div class="featured-img-area">
+                    <div>
+                        <img class="featured-img-1" src="/img/pngwing 6.png" alt="featured-img-1">
+                        <h3 class="featured-img-title">Pink Flower Tree</h3>
+                    </div>
+                    <div>
+                        <img class="featured-img-2" src="/img/pngwing 5.png" alt="featured-img-2">
+                        <h3 class="featured-img-title">Red Flower Tree</h3>
+                    </div>
+                    <div>
+                        <img class="featured-img-3" src="/img/pngwing 7.png" alt="featured-img-3">
+                        <h3 class="featured-img-title">Yellow Flower Tree</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--This is featured services section -->
+
+        <section class="services">
+            <div class="services-content">
+                <div class="services-item">
+                    <img src="/img/Group 57.png" alt="service-item-img">
+                    <p class="services-item-text">Same Day Delivery. Click & Collect.</p>
+                </div>
+                <div class="services-item">
+                    <img src="/img/Group 58.png" alt="service-item-img">
+                    <p class="services-item-text">Fresh Flowers. Local Growers.</p>
+                </div>
+                <div class="services-item">
+                    <img src="/img/Group 59.png" alt="service-item-img">
+                    <p class="services-item-text">24/7 Free Support.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="discount">
+            <div class="discount-content">
+                <h2 class="heading-primary">Hot Deal ! Sale Up To 25% Off</h2>
+                <p class="primary-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <button class="btn">Sign Up</button>
+            </div>
+            <div class="discount-img-area">
+                <img class="discount-img" src="/img/pngwing 8.png" alt="discount-img">
+            </div>
+        </section>
     </main>
 
     <!--This is footer section -->
