discount section added

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                 <p class="primary-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <button class="btn">Sign Up</button>
             </div>
-            <div class="discount-img-area">
-                <img class="discount-img" src="/img/pngwing 8.png" alt="discount-img">
+            <div>
+                <img src="/img/pngwing 8.png" alt="discount-img">
             </div>
         </section>
     </main>
