instagram section added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </section>
 
-        <!--This is featured services section -->
+        <!--This is services section -->
 
         <section class="services">
             <div class="services-content">
@@ -77,14 +77,46 @@
             </div>
         </section>
 
+        <!--This is discount section -->
+
         <section class="discount">
             <div class="discount-content">
-                <h2 class="heading-primary">Hot Deal ! Sale Up To 25% Off</h2>
+                <h2 class="heading-primary">Hot Deal ! Sale Up To 25% <span>Off</span></h2>
                 <p class="primary-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
                 <button class="btn">Sign Up</button>
             </div>
             <div>
                 <img src="/img/pngwing 8.png" alt="discount-img">
+            </div>
+        </section>
+
+    <!--This is instagram section -->
+
+        <section class="instagram">
+            <div class="instagram-content">
+                <div>
+                    <h2 class="heading-primary">Instagram</h2>
+                    <p class="primary-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+
+                <div class="instagram-img-area">
+                    <img class="instagram-img" src="/img/Flower 01.png" alt="instagram-img-1">
+
+                    <img class="instagram-img" src="/img/Rectangle 4.png" alt="instagram-img-2">
+
+                    <img class="instagram-img" src="/img/Rectangle 5.png" alt="instagram-img-3">
+
+                    <img class="instagram-img" src="/img/Rectangle 6.png" alt="instagram-img-4">
+                </div>
+            </div>
+        </section>
+
+        <section class="subscribe">
+            <div class="subscribe-content">
+                <div class="subscribe-header">
+                    <h2 class="subscribe-heading">Get The Latest Deals</h2>
+                    <p class="primary-text">$30 coupon for first shopping</p>
+                </div>
             </div>
         </section>
     </main>
