--- a/index.html
+++ b/index.html
@@ -117,13 +117,22 @@
                     <h2 class="subscribe-heading">Get The Latest Deals</h2>
                     <p class="primary-text">$30 coupon for first shopping</p>
                 </div>
+
+                <div class="subscribe-input">
+                    <input class="input-email" placeholder="Enter your email here...."  type="email" name="email">
+                    <input class="sub-btn"  type="submit" name="submit">
+                </div>
             </div>
         </section>
     </main>
 
     <!--This is footer section -->
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-container">
+            <h2 class="footer-heading"><span>Flower</span>Shop</h2>
+            <p class="footer-text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="footer-copyright">@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
     </footer>
 </body>
 
