--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="header-img-area">
-            <img class="header-img" src="/img/pngwing 10.png" alt="header-img">
+            <img class="header-img" src="./img/pngwing 10.png" alt="header-img">
         </div>
     </header>
 
