--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 
                 <div class="featured-img-area">
                     <div>
-                        <img class="featured-img-1" src="/img/pngwing 6.png" alt="featured-img-1">
+                        <img class="featured-img-1" src="./img/pngwing 6.png" alt="featured-img-1">
                         <h3 class="featured-img-title">Pink Flower Tree</h3>
                     </div>
                     <div>
-                        <img class="featured-img-2" src="/img/pngwing 5.png" alt="featured-img-2">
+                        <img class="featured-img-2" src="./img/pngwing 5.png" alt="featured-img-2">
                         <h3 class="featured-img-title">Red Flower Tree</h3>
                     </div>
                     <div>
-                        <img class="featured-img-3" src="/img/pngwing 7.png" alt="featured-img-3">
+                        <img class="featured-img-3" src="./img/pngwing 7.png" alt="featured-img-3">
                         <h3 class="featured-img-title">Yellow Flower Tree</h3>
                     </div>
                 </div>
@@ -63,15 +63,15 @@
         <section class="services">
             <div class="services-content">
                 <div class="services-item">
-                    <img src="/img/Group 57.png" alt="service-item-img">
+                    <img src="./img/Group 57.png" alt="service-item-img">
                     <p class="services-item-text">Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="services-item">
-                    <img src="/img/Group 58.png" alt="service-item-img">
+                    <img src="./img/Group 58.png" alt="service-item-img">
                     <p class="services-item-text">Fresh Flowers. Local Growers.</p>
                 </div>
                 <div class="services-item">
-                    <img src="/img/Group 59.png" alt="service-item-img">
+                    <img src="./img/Group 59.png" alt="service-item-img">
                     <p class="services-item-text">24/7 Free Support.</p>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                 <button class="btn">Sign Up</button>
             </div>
             <div>
-                <img src="/img/pngwing 8.png" alt="discount-img">
+                <img src="./img/pngwing 8.png" alt="discount-img">
             </div>
         </section>
 
@@ -100,13 +100,13 @@
                 </div>
 
                 <div class="instagram-img-area">
-                    <img class="instagram-img" src="/img/Flower 01.png" alt="instagram-img-1">
+                    <img class="instagram-img" src="./img/Flower 01.png" alt="instagram-img-1">
 
-                    <img class="instagram-img" src="/img/Rectangle 4.png" alt="instagram-img-2">
+                    <img class="instagram-img" src="./img/Rectangle 4.png" alt="instagram-img-2">
 
-                    <img class="instagram-img" src="/img/Rectangle 5.png" alt="instagram-img-3">
+                    <img class="instagram-img" src="./img/Rectangle 5.png" alt="instagram-img-3">
 
-                    <img class="instagram-img" src="/img/Rectangle 6.png" alt="instagram-img-4">
+                    <img class="instagram-img" src="./img/Rectangle 6.png" alt="instagram-img-4">
                 </div>
             </div>
         </section>
