expert section added

--- a/index.html
+++ b/index.html
@@ -111,6 +111,45 @@
             </div>
         </section>
 
+        <!--This is experts section -->
+
+        <section class="experts">
+            <div class="experts-content">
+                <div>
+                    <h2 class="heading-primary">Flower Experts</h2>
+                    <p class="primary-text">A perfect blend of creativity, energy, communication, happiness and love. Let us arrange a smile for you.</p>
+                </div>
+
+                <div class="experts-img-area">
+                    <div>
+                        <img src="./img/expert-1.png" alt="expert-1-img">
+                        <h4 class="experts-name">CRYSTAL BROOKS</h4>
+                        <h5 class="experts-category">Florist</h5>
+                    </div>
+
+                    <div>
+                        <img src="./img/expert-2.png" alt="expert-1-img">
+                        <h4 class="experts-name">SHIRLEY HARRIS</h4>
+                        <h5 class="experts-category">Manager</h5>
+                    </div>
+
+                    <div>
+                        <img src="./img/expert-3.png" alt="expert-1-img">
+                        <h4 class="experts-name">BEVERLY CLARK</h4>
+                        <h5 class="experts-category">Florist</h5>
+                    </div>
+
+                    <div>
+                        <img src="./img/expert-4.png" alt="expert-1-img">
+                        <h4 class="experts-name">AMANDA WATKINS</h4>
+                        <h5 class="experts-category">Florist</h5>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--This is subscribe section -->
+
         <section class="subscribe">
             <div class="subscribe-content">
                 <div class="subscribe-header">
