add some effect

--- a/index.html
+++ b/index.html
@@ -121,25 +121,25 @@
                 </div>
 
                 <div class="experts-img-area">
-                    <div>
+                    <div class="experts-img-box">
                         <img src="./img/expert-1.png" alt="expert-1-img">
                         <h4 class="experts-name">CRYSTAL BROOKS</h4>
                         <h5 class="experts-category">Florist</h5>
                     </div>
 
-                    <div>
+                    <div class="experts-img-box">
                         <img src="./img/expert-2.png" alt="expert-1-img">
                         <h4 class="experts-name">SHIRLEY HARRIS</h4>
                         <h5 class="experts-category">Manager</h5>
                     </div>
 
-                    <div>
+                    <div class="experts-img-box">
                         <img src="./img/expert-3.png" alt="expert-1-img">
                         <h4 class="experts-name">BEVERLY CLARK</h4>
                         <h5 class="experts-category">Florist</h5>
                     </div>
 
-                    <div>
+                    <div class="experts-img-box">
                         <img src="./img/expert-4.png" alt="expert-1-img">
                         <h4 class="experts-name">AMANDA WATKINS</h4>
                         <h5 class="experts-category">Florist</h5>
