--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                 <div class="subscribe-input">
                     <input class="input-email" placeholder="Enter your email here...."  type="email" name="email">
-                    <input class="sub-btn"  type="submit" name="submit">
+                    <input class="sub-btn"  type="submit" name="submit" value="Subscribe">
                 </div>
             </div>
         </section>
